--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com-ftreesmilo:ftreesmilo/use-discord.git"
+    "url": "github:ftreesmilo/use-discord"
   },
   "author": "ftreesmilo <58193105+ftreesmilo@users.noreply.github.com>",
   "license": "Apache-2.0",
