--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.3",
     "pkce-challenge": "^3.0.0",
     "prop-types": "^15.8.1",
+    "remove": "^0.1.5",
     "use-interval": "^1.4.0"
   },
   "peerDependencies": {
@@ -26,6 +27,7 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "eslint": "^8.15.0",
