--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.10",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "eslint": "^8.15.0",
